--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,16 @@
 {
   "hosting": {
-    "public": "dist/MyApp",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
-          "source": "**",
-          "destination": "/index.html"
+        "source": "**",
+        "destination": "/index.html"
       }
-  ]
+    ]
   }
 }
