--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^4.4.1",
     "firebase-tools": "^9.21.0",
     "hammerjs": "^2.0.8",
+    "ng-particles": "^2.22.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "tsparticles": "^1.39.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
